@@ -1,4 +1,49 @@
-Tue Jul 12 22:21:14 2016 --> [BEGIN] New log file started. To review old log files, see ./archive/
-Tue Jul 12 22:21:41 2016 --> [ LOG ] Lobsang.begin() called.
-Tue Jul 12 22:21:43 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
-Tue Jul 12 22:21:44 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Fri Jul 15 10:54:18 2016 --> [BEGIN] New log file started. To review old log files, see ./archive/
+Fri Jul 15 10:54:44 2016 --> [ LOG ] Lobsang.begin() called.
+Fri Jul 15 10:54:45 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 10:54:47 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Fri Jul 15 10:57:51 2016 --> [ LOG ] Lobsang.begin() called.
+Fri Jul 15 10:57:52 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 10:57:55 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 10:57:57 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 10:57:59 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 10:58:01 2016 --> [ERROR] Duino is not responding to 'OK?' query. Cannot continue running program.
+Fri Jul 15 11:08:48 2016 --> [ LOG ] Lobsang.begin() called.
+Fri Jul 15 11:08:49 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:08:51 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:08:53 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:08:55 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:08:57 2016 --> [ERROR] Duino is not responding to 'OK?' query. Cannot continue running program.
+Fri Jul 15 11:18:35 2016 --> [ LOG ] Lobsang.begin() called.
+Fri Jul 15 11:18:37 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:18:39 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:18:41 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:18:43 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:18:45 2016 --> [ERROR] Duino is not responding to 'OK?' query. Cannot continue running program.
+Fri Jul 15 11:18:35 2016 --> [ LOG ] Lobsang.begin() called.
+Fri Jul 15 11:18:37 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:18:39 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:18:41 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:18:43 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:18:45 2016 --> [ERROR] Duino is not responding to 'OK?' query. Cannot continue running program.
+Fri Jul 15 11:28:02 2016 --> [ LOG ] Lobsang.begin() called.
+Fri Jul 15 11:28:03 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:28:06 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:28:08 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:28:10 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 11:28:12 2016 --> [ERROR] Duino is not responding to 'OK?' query. Cannot continue running program.
+Fri Jul 15 12:26:53 2016 --> [ LOG ] Lobsang.begin() called.
+Fri Jul 15 12:26:54 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 12:26:56 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 12:26:59 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 12:27:01 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 12:27:03 2016 --> [ERROR] Duino is not responding to 'OK?' query. Cannot continue running program.
+Fri Jul 15 12:29:52 2016 --> [ LOG ] Lobsang.begin() called.
+Fri Jul 15 12:29:54 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 12:29:56 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 12:29:58 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 12:30:00 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 12:30:02 2016 --> [ERROR] Duino is not responding to 'OK?' query. Cannot continue running program.
+Fri Jul 15 12:50:36 2016 --> [ LOG ] Lobsang.begin() called.
+Fri Jul 15 12:50:38 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Fri Jul 15 12:50:39 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
